<resources>
    <string name="app_name">SAMAPTA</string>
    <string name="disaster_report">DISASTER REPORT</string>
    <string name="user_report">LAPOR</string>
    <string name="admin_report">Admin Report</string>
    <string name="informasi">Informasi</string>
    <string name="perhatian">Mohon isi format dibawah ini dengan sebenar-benarnya untuk keakuratan data yang baik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laporan_bencana">Laporan Bencana</string>
    <string name="nama_bencana_yang_terjadi">Nama Bencana Yang Terjadi</string>
    <string name="tingkat_1">Tingkat 1</string>
    <string name="tingkat_2">Tingkat 2</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="upload">upload</string>
    <string name="tingkat_3">Tingkat 3</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="gambarang_umum_keadaan">Gambaran Umum Keadaan</string>
    <string name="pilih_tingkat_keparahan">Pilih Tingkat Keparahan</string>
    <string name="pusat_informasi">Pusat Informasi</string>
    <string name="nama_laporan">Nama Laporan</string>
    <string name="keterangan">Keterangan</string>
    <string name="choose_from_galery">Choose From Galery</string>
    <string name="take_image">Take Image</string>
    <string name="samapta">SAMAPTA</string>
    <string name="berita_terbaru">Berita Terbaru</string>
    <string name="todo">TODO</string>
    <string name="lapor">Lapor</string>
    <string name="info">Tentang</string>
    <string name="admin">Admin</string>
    <string name="bantuan">Bantuan</string>
    <string name="kegiatan">Di Sekitar Anda</string>
    <string name="pilih_dari_penyimpanan">PILIH DARI PENYIMPANAN</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="are_you_sure">Apakah Anda Yakin ?</string>
    <string name="are_you">Anda akan pergi ke halaman website</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="hi_welcome_to_samapta">Hai, selamat datang di Samapta!</string>
    <string name="greeting">Untuk melanjutkan silahkan login dengan akun email anda</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ketik_provinsi">Ketik Provinsi</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="ketik_kota_kabupaten">Ketik Kota/Kabupaten</string>
    <string name="ketik_kecamatan">Ketik Kecamatan</string>
    <string name="kecamatan">Kecamatan</string>
</resources>