<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/ll_home_false"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/shape6"
        android:orientation="vertical"
        android:padding="16dp"
        tools:viewBindingIgnore="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/samapta"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="7dp"
            android:textColor="@color/white"
            android:text="@string/hi_welcome_to_samapta"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/greeting"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:viewBindingIgnore="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/shape6"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/samapta"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:text="Hallo Pengguna"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/btn_bantuan"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/todo"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_questionmark"
                        android:theme="@android:style/ThemeOverlay.Material.Dark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bantuan"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/btn_user_report"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/todo"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_report4"
                        android:theme="@android:style/ThemeOverlay.Material.Dark" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lapor"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/btn_tentang"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/todo"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_info_blue"
                        android:theme="@android:style/ThemeOverlay.Material.Dark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tentang"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/berita_terbaru"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_marginEnd="15dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/img_web_cov1" />

                    <ImageView
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_marginEnd="15dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/img_web_cov2" />

                    <ImageView
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_marginEnd="15dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_kipi" />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kegiatan"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/shape"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Cuaca Hari" />

                <ImageView
                    android:id="@+id/btn_ramalan"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_ramalan_cuaca" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>